--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Whisked Away
-baseurl: "/whisked-away" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://aqsaamjad05.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 markdown: kramdown
